# ConfigParser

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
src/: AppConfig.h  Binder.cpp  Binder.h  Config.cpp  Config.h  ConfigError.h  ConfigParser.cpp  ConfigParser.h  ConfigView.h  Descriptor.h  Helper.h  IParser.h  Node.h
tests/: ParserTests.cpp
